# torchjucer

./: README.md  generate.sh
patterns/effect/: CMakeLists.txt  FileList.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
patterns/effect/models/: CMakeLists.txt
patterns/effect/resources/: CMakeLists.txt
